--- a/history.txt
+++ b/history.txt
@@ -1,20 +1,20 @@
-sudo systemctl status ssh
-sudo apt update
-sudo apt install openssh-server -y
-sudo systemctl enable --now ssh
-sudo systemctl status ssh
-clear\
-clear
-echo eswar
-echo "eswar"
-exit
-echo "eswar        "
-cat < history.txt | wc -l > lines.txt
-cat lines.txt
 ls | grep *.txt > out.txt
 cat out.txt
 exit
 git commit -m "io with redirection corrected"
 exit
 clear
+exit
+cd ..
+ls Posix-Shell
+ls
+cd Po
+cd Posix-Shell
+ls
+cat header.h
+cleat
+clear
+git add .
+git commit -m "corrected"
+exir
 exit
